[gd_scene load_steps=32 format=2]

[ext_resource path="res://NPCs/Hostile/Enemies/VikingBow/Viking.gd" type="Script" id=1]
[ext_resource path="res://NPCs/Hostile/Enemies/VikingBow/Hurtbox.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Characters/Enemies/viking_mage.png" type="Texture" id=3]
[ext_resource path="res://NPCs/Hostile/Enemies/VikingMage/StateMachine/EnemyStates.gd" type="Script" id=4]
[ext_resource path="res://NPCs/Hostile/Enemies/VikingMage/StateMachine/States/Idle.gd" type="Script" id=5]
[ext_resource path="res://NPCs/Hostile/Enemies/VikingMage/StateMachine/States/Patrol.gd" type="Script" id=6]
[ext_resource path="res://NPCs/Hostile/Enemies/VikingMage/StateMachine/States/Chase.gd" type="Script" id=7]
[ext_resource path="res://NPCs/Hostile/Enemies/VikingMage/StateMachine/States/Attack.gd" type="Script" id=8]
[ext_resource path="res://NPCs/Hostile/Enemies/VikingMage/StateMachine/States/Dead.gd" type="Script" id=9]

[sub_resource type="CapsuleShape2D" id=1]
height = 0.0

[sub_resource type="CapsuleShape2D" id=2]
height = 0.0

[sub_resource type="CircleShape2D" id=3]
radius = 197.184

[sub_resource type="Animation" id=7]
resource_name = "attack"
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42, 0.49, 0.56, 0.63, 0.7, 0.77, 0.84 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22 ]
}

[sub_resource type="Animation" id=10]
resource_name = "die"
length = 1.5
step = 0.09
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.09, 0.18, 0.27, 0.36, 0.45, 0.54, 0.63, 0.72, 0.81, 0.9, 0.99, 1.08, 1.17, 1.26, 1.35, 1.44 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=11]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "idle"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=13]
resource_name = "run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "die"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=18]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachine" id=8]
states/attack/node = SubResource( 14 )
states/attack/position = Vector2( 426, 118 )
states/die/node = SubResource( 15 )
states/die/position = Vector2( 692, 287 )
states/idle/node = SubResource( 16 )
states/idle/position = Vector2( 692, 177 )
states/run/node = SubResource( 17 )
states/run/position = Vector2( 966, 133 )
transitions = [ "attack", "idle", SubResource( 18 ), "run", "die", SubResource( 19 ), "idle", "die", SubResource( 20 ), "idle", "attack", SubResource( 21 ), "attack", "run", SubResource( 22 ), "run", "attack", SubResource( 23 ), "idle", "run", SubResource( 24 ), "run", "idle", SubResource( 25 ) ]
start_node = "idle"
end_node = "die"
graph_offset = Vector2( 0, 37.2635 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=9]

[node name="VikingMage" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 495
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="." groups=[
"hurtbox",
]]
collision_layer = 4
collision_mask = 384
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.31322, -3.93965 )
texture = ExtResource( 3 )
vframes = 6
hframes = 7

[node name="States" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="Patrol" type="Node" parent="States"]
script = ExtResource( 6 )

[node name="Chase" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="Attack" type="Node" parent="States"]
script = ExtResource( 8 )

[node name="Dead" type="Node" parent="States"]
script = ExtResource( 9 )

[node name="Timers" type="Node" parent="."]

[node name="IdleTime" type="Timer" parent="Timers"]

[node name="PatrolTime" type="Timer" parent="Timers"]

[node name="ShotCooldown" type="Timer" parent="Timers"]
wait_time = 0.7

[node name="ChaseArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseArea"]
position = Vector2( 1.31322, -3.93965 )
shape = SubResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
modulate = Color( 0.313726, 1, 0, 1 )

[node name="AimSights" type="RayCast2D" parent="."]
modulate = Color( 0.917647, 0.0352941, 0.0352941, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 7 )
anims/die = SubResource( 10 )
anims/hurt = SubResource( 11 )
anims/idle = SubResource( 12 )
anims/run = SubResource( 13 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 9 )

[connection signal="timeout" from="Timers/IdleTime" to="States/Idle" method="_on_IdleTime_timeout"]
[connection signal="timeout" from="Timers/PatrolTime" to="States/Patrol" method="_on_PatrolTime_timeout"]
[connection signal="timeout" from="Timers/ShotCooldown" to="States/Attack" method="_on_ShotCooldown_timeout"]
[connection signal="body_entered" from="ChaseArea" to="States/Patrol" method="_on_ChaseArea_body_entered"]
